<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvActivityHistory_Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvActivityHistory_Description"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvActivityHistory_Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvActivityHistory_Date"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvActivityHistory_FinalAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvActivityHistory_afterAmount"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/tvActivityHistory_TransactionAmount"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/tvActivityHistory_TransactionAmount"
            android:textAlignment="viewEnd"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>
</LinearLayout>
